--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <body>
         <!-- Intestazione della pagina -->
         <header>
-
+                <h1>Il mio viaggio a Londra</h1>
+                <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica di Londra">
+                <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Skyline di Londra">
+                <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Skyline di Londra">
         </header>
         <!-- /Intestazione della pagina -->
 
