Inserimento tabella section 1 del main

--- a/index.html
+++ b/index.html
@@ -15,14 +15,47 @@
                 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Skyline di Londra">
         </header>
         <!-- /Intestazione della pagina -->
-
+        <hr>
         <!-- Corpo della pagina -->
         <main>
             <!-- Section spese -->
             <section>
-
+                <!-- Tabella spese -->
+                <table>
+                    <!-- Intestazione tabella -->
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                    <!-- /Intestazione tabella -->
+                    <!-- Contenuto tabella -->
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                    <!-- /Contenuto tabella -->
+                </table>
+                <!-- /Tabella spese -->
             </section>
             <!-- /Section spese -->
+            <hr>
             <!-- Section to do list -->
             <section>
 
