Aggiunto titolo alla section 1 del main

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <main>
             <!-- Section spese -->
             <section>
+                <h3>Le mie Spese</h3>
                 <!-- Tabella spese -->
                 <table>
                     <!-- Intestazione tabella -->
