Inserimento lista section 2 del main

--- a/index.html
+++ b/index.html
@@ -59,9 +59,18 @@
             <hr>
             <!-- Section to do list -->
             <section>
-
+                <h4>Cose da fare</h4>
+                <!-- To do list -->
+                <ul>
+                    <li>Visitare la Tower of London &#10007</li>
+                    <li>Visitare Greenwich &#10003</li>
+                    <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+                    <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+                </ul>
+                <!-- /To do list -->
             </section>
             <!-- /Section to do list -->
+            <hr>
             <!-- Section info -->
             <section>
 
