--- a/index.html
+++ b/index.html
@@ -76,27 +76,30 @@
                 <h4>Info utili:</h4>
                 <!-- Lista annidata -->
                 <ol>
-                    <li>Numeri utili di emergenza</li>
-                        <!-- Sotto-lista -->
+                    <li>Numeri utili di emergenza
+                    <!-- Sotto-lista -->  
                         <ul>
                             <li><strong>999</strong> - Emergenza</li>
                             <li><strong>101</strong> - Polizia</li>
                             <li><strong>111</strong> - Numero assistenza medica</li>
                         </ul>
-                        <!-- /Sotto-lista -->
-                    <li>Hotel</li>
+                    </li>   
+                     <!-- /Sotto-lista -->
+                    <li>Hotel
                         <!-- Sotto-lista -->
                         <ul>
                             <li><strong>Nome hotel</strong>: Buckingham Palace</li>
                             <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
                         </ul>
+                    </li>
                         <!-- /Sotto-lista -->
-                    <li>Aereo</li>
+                    <li>Aereo
                         <!-- Sotto-lista -->
                         <ul>
                             <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
                             <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
                         </ul>
+                    </li>
                         <!-- /Sotto-lista -->
                 </ol>
                 <!-- /Lista annidata -->
