--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <body>
         <!-- Intestazione della pagina -->
         <header>
-                <h1>Il mio viaggio a Londra</h1>
+            <h1>Il mio Viaggio a Londra</h1>
+            <div>
                 <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica di Londra">
                 <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Skyline di Londra">
                 <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Skyline di Londra">
+            </div>
         </header>
         <!-- /Intestazione della pagina -->
         <hr>
@@ -24,34 +26,42 @@
                 <!-- Tabella spese -->
                 <table>
                     <!-- Intestazione tabella -->
-                    <tr>
-                        <th>Numero</th>
-                        <th>Descrizione</th>
-                        <th>Costo</th>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th>Numero</th>
+                            <th>Descrizione</th>
+                            <th>Costo</th>
+                        </tr>
+                    </thead>
                     <!-- /Intestazione tabella -->
                     <!-- Contenuto tabella -->
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto aereo</td>
-                        <td>120€</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto aereo</td>
-                        <td>120€</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Biglietto aereo</td>
-                        <td>120€</td>
-                    </tr>
-                    <tr>
-                        <td>Totale</td>
-                        <td></td>
-                        <td>360€</td>
-                    </tr>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Biglietto aereo</td>
+                            <td>120€</td>
+                        </tr>
+                    </tbody>
                     <!-- /Contenuto tabella -->
+                    <!-- Footer Tabella -->
+                    <tfoot>
+                        <tr>
+                            <td>Totale</td>
+                            <td></td>
+                            <td>360€</td>
+                        </tr>
+                    </tfoot>
+                    <!-- /Footer Tabella -->
                 </table>
                 <!-- /Tabella spese -->
             </section>
@@ -77,30 +87,32 @@
                 <!-- Lista annidata -->
                 <ol>
                     <li>Numeri utili di emergenza
-                    <!-- Sotto-lista -->  
+                        <!-- Sotto-lista -->  
                         <ul>
                             <li><strong>999</strong> - Emergenza</li>
                             <li><strong>101</strong> - Polizia</li>
                             <li><strong>111</strong> - Numero assistenza medica</li>
                         </ul>
+                         <!-- /Sotto-lista -->
                     </li>   
-                     <!-- /Sotto-lista -->
+                    
                     <li>Hotel
                         <!-- Sotto-lista -->
                         <ul>
                             <li><strong>Nome hotel</strong>: Buckingham Palace</li>
                             <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
                         </ul>
+                         <!-- /Sotto-lista -->
                     </li>
-                        <!-- /Sotto-lista -->
+                       
                     <li>Aereo
                         <!-- Sotto-lista -->
                         <ul>
                             <li><strong>Volo di Andata</strong>: YI234X, ore 9.30 da Milano Malpensa</li>
                             <li><strong>Volo di Ritorno</strong>: YI236X, ore 18.30 da London Heathrow</li>
                         </ul>
-                    </li>
                         <!-- /Sotto-lista -->
+                    </li>              
                 </ol>
                 <!-- /Lista annidata -->
             </section>
